force-app/main/default/objects/OpportunityLineItem/fields/Active_Host_NA_Only__c.field-meta.xml
<CustomField>
    <fullName>Active_Host_NA_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A flag for opportunities for Active Host - GlobalMeet Web.</description>
    <inlineHelpText>A flag for opportunities for Active Host - GlobalMeet Web.</inlineHelpText>
    <label>Active Host</label>
    <type>Checkbox</type>
</CustomField>