force-app/main/default/objects/OpportunityLineItem/fields/Admin_Flag__c.field-meta.xml
<CustomField>
    <fullName>Admin_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Admin Flag</label>
    <type>Checkbox</type>
</CustomField>