force-app/main/default/objects/OpportunityLineItem/fields/Cloned_From_Opportunity_Product_Id__c.field-meta.xml
<CustomField>
    <fullName>Cloned_From_Opportunity_Product_Id__c</fullName>
    <externalId>true</externalId>
    <label>Cloned From Opportunity Product Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>