force-app/main/default/objects/OpportunityLineItem/fields/Committed_Contract__c.field-meta.xml
<CustomField>
    <fullName>Committed_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Committed Contract</label>
    <type>Checkbox</type>
</CustomField>