force-app/main/default/objects/OpportunityLineItem/fields/Existing_Service__c.field-meta.xml
<CustomField>
    <fullName>Existing_Service__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enter 2 Products- 1st with the box checked for Existing Service, 2nd for New Service being added</inlineHelpText>
    <label>Existing Service</label>
    <type>Checkbox</type>
</CustomField>