force-app/main/default/objects/OpportunityLineItem/fields/Historic_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Historic_Line_Item__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Historic Line Item</label>
    <type>Checkbox</type>
</CustomField>