force-app/main/default/objects/OpportunityLineItem/fields/iMC_Opportunity_Product_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>iMC_Opportunity_Product_Record_ID__c</fullName>
    <label>iMC Opportunity Product Record ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>