force-app/main/default/objects/OpportunityLineItem/fields/iMCNRRProduct__c.field-meta.xml
<CustomField>
    <fullName>iMCNRRProduct__c</fullName>
    <defaultValue>false</defaultValue>
    <description>updated by WFR from Products if the Product is selected as an iMC NRR</description>
    <label>iMC NRR Product</label>
    <type>Checkbox</type>
</CustomField>