force-app/main/default/objects/OpportunityLineItem/fields/iMCProduct__c.field-meta.xml
<CustomField>
    <fullName>iMCProduct__c</fullName>
    <defaultValue>false</defaultValue>
    <description>auto set based off WFR that if the Oppty Product comes from the iMC Product Catalog</description>
    <label>iMC Product</label>
    <type>Checkbox</type>
</CustomField>