force-app/main/default/objects/OpportunityLineItem/fields/iMeet_Product__c.field-meta.xml
<CustomField>
    <fullName>iMeet_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>iMeet Product</label>
    <type>Checkbox</type>
</CustomField>