force-app/main/default/objects/OpportunityLineItem/fields/Initial_Bill_Date__c.field-meta.xml
<CustomField>
    <fullName>Initial_Bill_Date__c</fullName>
    <inlineHelpText>Expected date (confirmed by IST or PMO) when GCS customer will be initially billed for this new service</inlineHelpText>
    <label>Initial Bill Date</label>
    <type>Date</type>
</CustomField>