force-app/main/default/objects/OpportunityLineItem/fields/Invoice_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_End_Date__c</fullName>
    <formula>ISD__c + ((365 /12) * IF(Invoice_Number_of_Months__c &gt; 10000, 1, Invoice_Number_of_Months__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice End Date</label>
    <type>Date</type>
</CustomField>