force-app/main/default/objects/OpportunityLineItem/fields/Invoice_Number_of_Months__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number_of_Months__c</fullName>
    <formula>Quantity / PricebookEntry.Product2.Scheduling_Days_per_Month__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice/Project Number of Months</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>