force-app/main/default/objects/OpportunityLineItem/fields/ISD__c.field-meta.xml
<CustomField>
    <fullName>ISD__c</fullName>
    <formula>IF (
OR( 
ISPICKVAL( PricebookEntry.Product2.Family  , &quot;Custom Development&quot; ), 
ISPICKVAL( PricebookEntry.Product2.Family  , &quot;Consulting&quot; ), 
ISPICKVAL( PricebookEntry.Product2.Family  , &quot;Project Management&quot; ), 
ISPICKVAL( PricebookEntry.Product2.Family  , &quot;User Adoption&quot; )),Opportunity.CloseDate + 60,
IF ( ISPICKVAL( PricebookEntry.Product2.Family  , &quot;Support&quot;),  Opportunity.CloseDate + 30,
IF ( ISPICKVAL(PricebookEntry.Product2.Family   , &quot;Custom Dev&quot;), Opportunity.CloseDate + 60, Opportunity.CloseDate)))</formula>
    <label>Invoice/Project Start Date</label>
    <type>Date</type>
</CustomField>