force-app/main/default/objects/OpportunityLineItem/fields/IsGlobalMeetRelated__c.field-meta.xml
<CustomField>
    <fullName>IsGlobalMeetRelated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is GlobalMeet Related</label>
    <type>Checkbox</type>
</CustomField>