force-app/main/default/objects/OpportunityLineItem/fields/isReportable_Text__c.field-meta.xml
<CustomField>
    <fullName>isReportable_Text__c</fullName>
    <defaultValue>&quot;Valid&quot;</defaultValue>
    <label>Line Status</label>
    <length>15</length>
    <type>Text</type>
</CustomField>