force-app/main/default/objects/OpportunityLineItem/fields/ISY__c.field-meta.xml
<CustomField>
    <fullName>ISY__c</fullName>
    <formula>Year( ISD__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice/Project Start Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>