force-app/main/default/objects/OpportunityLineItem/fields/Item_Cost__c.field-meta.xml
<CustomField>
    <fullName>Item_Cost__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>The cost only needs to be entered on Third Party items.  It will automatically be calculated on Modality Products and Services.</inlineHelpText>
    <label>Item Cost</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>