force-app/main/default/objects/OpportunityLineItem/fields/legacy_Item__c.field-meta.xml
<CustomField>
    <fullName>legacy_Item__c</fullName>
    <description>This field is for legacy reporting purposes.</description>
    <label>legacy_Item</label>
    <length>50</length>
    <type>Text</type>
</CustomField>