force-app/main/default/objects/OpportunityLineItem/fields/Legacy_MRR__c.field-meta.xml
<CustomField>
    <fullName>Legacy_MRR__c</fullName>
    <label>Legacy MRR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>