force-app/main/default/objects/OpportunityLineItem/fields/LicenseSet__c.field-meta.xml
<CustomField>
    <fullName>LicenseSet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LicenseSet</label>
    <referenceTo>LicenseSet__c</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>