force-app/main/default/objects/OpportunityLineItem/fields/ListPriceDiscount__c.field-meta.xml
<CustomField>
    <fullName>ListPriceDiscount__c</fullName>
    <formula>(PricebookEntry.UnitPrice -(UnitPrice - (UnitPrice * Discount))) / ABS(PricebookEntry.UnitPrice)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>List Price Discount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>