force-app/main/default/objects/OpportunityLineItem/fields/Min_Commit__c.field-meta.xml
<CustomField>
    <fullName>Min_Commit__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>May need to enter 2 Products- 1st with the box checked for the Min. Commit amount, 2nd if necessary, for estimated amount</inlineHelpText>
    <label>Min. Commit</label>
    <type>Checkbox</type>
</CustomField>