force-app/main/default/objects/OpportunityLineItem/fields/Mod_Line_Description__c.field-meta.xml
<CustomField>
    <fullName>Mod_Line_Description__c</fullName>
    <label>Line Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>