force-app/main/default/objects/OpportunityLineItem/fields/Modality_Opty_Product_ID__c.field-meta.xml
<CustomField>
    <fullName>Modality_Opty_Product_ID__c</fullName>
    <externalId>true</externalId>
    <label>Modality Opty Product ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>