force-app/main/default/objects/OpportunityLineItem/fields/ModalityOpptyProduct__c.field-meta.xml
<CustomField>
    <fullName>ModalityOpptyProduct__c</fullName>
    <formula>CONTAINS(PricebookEntry.Product_RecordType_Name__c, &apos;Modality&apos;)</formula>
    <label>Modality Oppty Product</label>
    <type>Checkbox</type>
</CustomField>