force-app/main/default/objects/OpportunityLineItem/fields/New_Quantity__c.field-meta.xml
<CustomField>
    <fullName>New_Quantity__c</fullName>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>