force-app/main/default/objects/OpportunityLineItem/fields/New_Sales_Price__c.field-meta.xml
<CustomField>
    <fullName>New_Sales_Price__c</fullName>
    <label>Unit Price</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>