force-app/main/default/objects/OpportunityLineItem/fields/NRR__c.field-meta.xml
<CustomField>
    <fullName>NRR__c</fullName>
    <formula>IF(iMCNRRProduct__c = TRUE &amp;&amp; iMCProduct__c = TRUE, TotalPrice,
IF(ISPICKVAL(Billing_Frequency__c, &quot;One Time Event&quot;), New_Sales_Price__c * New_Quantity__c, 
IF(ISPICKVAL(Billing_Frequency__c, &quot;Pay Per Use&quot;), New_Sales_Price__c * New_Quantity__c,
IF(ISPICKVAL(Unit_Type__c , &quot;Ancillary&quot;), New_Sales_Price__c * New_Quantity__c,
0))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product NRR</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>