force-app/main/default/objects/OpportunityLineItem/fields/of_Opportunity_Products__c.field-meta.xml
<CustomField>
    <fullName>of_Opportunity_Products__c</fullName>
    <description>Power of One</description>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># of Opportunity Products</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>