force-app/main/default/objects/OpportunityLineItem/fields/PPU__c.field-meta.xml
<CustomField>
    <fullName>PPU__c</fullName>
    <formula>CASE( PricebookEntry.Product2.Name ,&quot;Internal Users&quot;, UnitPrice / Quantity,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PPU</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>