force-app/main/default/objects/OpportunityLineItem/fields/Product_Name1__c.field-meta.xml
<CustomField>
    <fullName>Product_Name1__c</fullName>
    <label>Product Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>