force-app/main/default/objects/OpportunityLineItem/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Modality</fullName>
            </value>
            <value>
                <fullName>Third Party Devices</fullName>
            </value>
            <value>
                <fullName>Third Party Hardware</fullName>
            </value>
            <value>
                <fullName>Third Party Services</fullName>
            </value>
            <value>
                <fullName>Third Party Software</fullName>
            </value>
            <value>
                <fullName>Third Party Support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>