force-app/main/default/objects/OpportunityLineItem/fields/RT_Opty_Prod_Id__c.field-meta.xml
<CustomField>
    <fullName>RT_Opty_Prod_Id__c</fullName>
    <externalId>true</externalId>
    <label>RT Opty Prod Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>