force-app/main/default/objects/OpportunityLineItem/fields/Support_Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Support_Renewal_Date__c</fullName>
    <formula>ISD__c + 365</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Support Renewal Date</label>
    <type>Date</type>
</CustomField>