force-app/main/default/objects/OpportunityLineItem/fields/TalkPointAnnualized__c.field-meta.xml
<CustomField>
    <fullName>TalkPointAnnualized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TalkPoint Annualized</label>
    <type>Checkbox</type>
</CustomField>