force-app/main/default/objects/OpportunityLineItem/fields/Total_Margin__c.field-meta.xml
<CustomField>
    <fullName>Total_Margin__c</fullName>
    <formula>Item_Margin__c * Quantity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>