force-app/main/default/objects/OpportunityLineItem/fields/Total_Product_Revenue_Prior_1_1_17__c.field-meta.xml
<CustomField>
    <fullName>Total_Product_Revenue_Prior_1_1_17__c</fullName>
    <formula>IF(isReportable_Text__c = &#39;Invalid&#39;, 0, 
IF(Existing_Service__c = True, 0, 
IF(ISPICKVAL(Billing_Frequency__c,&#39;Annually&#39;), ((New_Sales_Price__c* New_Quantity__c)/12)*Contract_Term__c, 
IF(ISPICKVAL(Billing_Frequency__c ,&#39;Quarterly&#39;),((New_Sales_Price__c* New_Quantity__c)/3)*Contract_Term__c, 
(New_Sales_Price__c* New_Quantity__c)*Contract_Term__c 
))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Product Revenue (Prior 1/1/17)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>