force-app/main/default/objects/OpportunityLineItem/fields/TPx_MRR__c.field-meta.xml
<CustomField>
    <fullName>TPx_MRR__c</fullName>
    <formula>MRR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TPx MRR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>