force-app/main/default/objects/OpportunityLineItem/fields/Unit_Price_Create_Only__c.field-meta.xml
<CustomField>
    <fullName>Unit_Price_Create_Only__c</fullName>
    <label>Unit Price (Create/Edit Only)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>