force-app/main/default/objects/OpportunityLineItem/fields/Unit_Type_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Unit_Type_Rollup__c</fullName>
    <description>Temporary field to fix short-term reporting issue.</description>
    <formula>IF(
ISPICKVAL(Unit_Type__c, &quot;Minute&quot;), &quot;Minutes&quot;,
IF(
ISPICKVAL(Unit_Type__c, &quot;Month&quot;), &quot;Licenses&quot;,
IF(
ISPICKVAL(Unit_Type__c, &quot;Event&quot;), &quot;Minutes&quot;,
IF(
ISBLANK(TEXT(Unit_Type__c)), &quot;Minutes&quot;, TEXT(Unit_Type__c)
))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Type Rollup</label>
    <type>Text</type>
</CustomField>