force-app/main/default/objects/OpportunityLineItem/fields/Value_Over_Term__c.field-meta.xml
<CustomField>
    <fullName>Value_Over_Term__c</fullName>
    <description>andy = updated from = Minutes to contains Minute 4/24/2014</description>
    <formula>/*****************************************************/ 
/*Product TCV || Value_Over_Term__c*/ 
IF(Historic_Line_Item__c = TRUE, 0, 
IF(isReportable_Text__c = &quot;Invalid&quot;, 0, 
IF(ISPICKVAL(Unit_Type__c, &quot;Ancillary&quot;), 0, 
IF(ISPICKVAL(Unit_Type__c, &quot;Contract&quot;), 0, 
IF(Contains(TEXT(Unit_Type__c), &quot;Minute&quot;) &amp;&amp; Min_Commit__c = False, 0,
IF(ISPICKVAL(Billing_Frequency__c, &quot;One Time Event&quot;), New_Sales_Price__c*New_Quantity__c, 
IF(ISPICKVAL(Billing_Frequency__c ,&#39;Monthly&#39;),New_Sales_Price__c*New_Quantity__c*Contract_Term__c, 
IF(ISPICKVAL(Billing_Frequency__c ,&#39;Quarterly&#39;),((New_Sales_Price__c* New_Quantity__c)/3)* Contract_Term__c, 
IF(ISPICKVAL(Billing_Frequency__c ,&#39;Annually&#39;),New_Sales_Price__c* New_Quantity__c*( Contract_Term__c /12),New_Sales_Price__c*New_Quantity__c 
) 
) 
) 
) 
) 
) 
) 
) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product TCV</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>