force-app/main/default/objects/OpportunityLineItem/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <inlineHelpText>Only required for Third Party Products</inlineHelpText>
    <label>Vendor</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product_Type__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>3C Technology</fullName>
            </value>
            <value>
                <fullName>A10</fullName>
            </value>
            <value>
                <fullName>Aastra</fullName>
            </value>
            <value>
                <fullName>Acano</fullName>
            </value>
            <value>
                <fullName>Acme Packet</fullName>
            </value>
            <value>
                <fullName>Actiance</fullName>
            </value>
            <value>
                <fullName>AdvaTel</fullName>
            </value>
            <value>
                <fullName>AGAT</fullName>
            </value>
            <value>
                <fullName>Altigen</fullName>
            </value>
            <value>
                <fullName>Anywhere 365</fullName>
            </value>
            <value>
                <fullName>Ashton Bentley</fullName>
            </value>
            <value>
                <fullName>Aspect</fullName>
            </value>
            <value>
                <fullName>AudioCodes</fullName>
            </value>
            <value>
                <fullName>Avaya (Scopia)</fullName>
            </value>
            <value>
                <fullName>AVSNet</fullName>
            </value>
            <value>
                <fullName>AVST</fullName>
            </value>
            <value>
                <fullName>Busylights</fullName>
            </value>
            <value>
                <fullName>CallTower</fullName>
            </value>
            <value>
                <fullName>Carillion</fullName>
            </value>
            <value>
                <fullName>Cisco</fullName>
            </value>
            <value>
                <fullName>Citrix</fullName>
            </value>
            <value>
                <fullName>Clarify</fullName>
            </value>
            <value>
                <fullName>Code Software</fullName>
            </value>
            <value>
                <fullName>Competella</fullName>
            </value>
            <value>
                <fullName>Content &amp; Code</fullName>
            </value>
            <value>
                <fullName>Datac</fullName>
            </value>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Enghouse</fullName>
            </value>
            <value>
                <fullName>Enghouse (Zeacom)</fullName>
            </value>
            <value>
                <fullName>Event Zero</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>