force-app/main/default/objects/OpportunityLineItem/fields/Weighted_Margin__c.field-meta.xml
<CustomField>
    <fullName>Weighted_Margin__c</fullName>
    <formula>Total_Margin__c *  Opportunity.Probability</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weighted Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>