force-app/main/default/objects/OpportunityLineItem/fields/Weighted_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Weighted_Quantity__c</fullName>
    <formula>Quantity *  Opportunity.Probability</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weighted Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>