force-app/main/default/objects/OpportunityLineItem/fields/X100_Ramp_Date__c.field-meta.xml
<CustomField>
    <fullName>X100_Ramp_Date__c</fullName>
    <inlineHelpText>Expected date (confirmed by IST or PMO) when GCS customer will be billed full MRR for this new service</inlineHelpText>
    <label>100% Ramp Date</label>
    <type>Date</type>
</CustomField>