force-app/main/default/objects/OpportunityLineItem/fields/z_Source__c.field-meta.xml
<CustomField>
    <fullName>z_Source__c</fullName>
    <label>z-Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Salesgateway</fullName>
            </value>
            <value>
                <fullName>eCommerce</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>