force-app/main/default/objects/OpportunityLineItem/validationRules/PGi_Cannot_set_Webinar_Bundle_NOT_Lic.validationRule-meta.xml
<ValidationRule>
    <fullName>PGi_Cannot_set_Webinar_Bundle_NOT_Lic</fullName>
    <active>true</active>
    <description>Enforce can only use unit type of licenses for American: Web: GlobalMeet Webinar</description>
    <errorConditionFormula>AND(
CONTAINS(Opportunity.RecordType.Name, &quot;PGi&quot;), 
$User.ProfileId &lt;&gt; &quot;00e30000001kms9&quot;, 
NOT(
ISPICKVAL(Unit_Type__c, &quot;Licenses&quot;)),
CONTAINS(Product2.Name, &quot;Bundle: GlobalMeet Webinar&quot;)
)</errorConditionFormula>
    <errorDisplayField>Unit_Type__c</errorDisplayField>
    <errorMessage>The Unit Type must be Licenses for the product selected.</errorMessage>
</ValidationRule>