force-app/main/default/objects/OpportunityLineItem/validationRules/PGi_Contract_Term_greater_than_Zero.validationRule-meta.xml
<ValidationRule>
    <fullName>PGi_Contract_Term_greater_than_Zero</fullName>
    <active>true</active>
    <description>Contract Term must be greater than zero</description>
    <errorConditionFormula>AND (
$User.ProfileId &lt;&gt; &quot;00e30000001kms9&quot;, 
CONTAINS(Opportunity.RecordType.Name, &quot;PGi&quot;), 
AND
(Contract_Term__c  &lt;= 0, $User.Override_Validation_Rules__c = False ))</errorConditionFormula>
    <errorDisplayField>Contract_Term__c</errorDisplayField>
    <errorMessage>Contract Term must be greater than zero.</errorMessage>
</ValidationRule>