force-app/main/default/objects/OpportunityLineItem/validationRules/PGi_Contract_Term_Multiple_of_12.validationRule-meta.xml
<ValidationRule>
    <fullName>PGi_Contract_Term_Multiple_of_12</fullName>
    <active>true</active>
    <description>When the Billing Frequency selected is &quot;Annually&quot;, the Contract Term selected must be a multiple of 12 (i.e. 12, 24, 36, 48, etc.)</description>
    <errorConditionFormula>AND(
$User.ProfileId &lt;&gt; &quot;00e30000001kms9&quot;, 
CONTAINS(Opportunity.RecordType.Name, &quot;PGi&quot;), 
IF(AND
( ISPICKVAL(Billing_Frequency__c , &#39;Annually&#39;) , MOD(Contract_Term__c,12) &lt;&gt;0, $User.Override_Validation_Rules__c = False ),True,False))</errorConditionFormula>
    <errorDisplayField>Contract_Term__c</errorDisplayField>
    <errorMessage>When the Billing Frequency selected is Annually, the Contract Term selected must be a multiple of 12</errorMessage>
</ValidationRule>