force-app/main/default/objects/OpportunityLineItem/validationRules/PGi_GCS_Ramp_Dates_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>PGi_GCS_Ramp_Dates_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
$User.ProfileId &lt;&gt; &quot;00e30000001kms9&quot;, 
CONTAINS(Opportunity.RecordType.Name, &quot;PGi&quot;), 
$User.Override_Validation_Rules__c = False,
$Permission.GCS_Read_Write_Ramp_Dates,
Existing_Service__c = False,
OR(ISBLANK(Initial_Bill_Date__c),
ISBLANK(X100_Ramp_Date__c)),
OR(
ISPICKVAL(Opportunity.StageName,&apos;Purchase&apos;), 
ISPICKVAL(Opportunity.StageName,&apos;Closed Won&apos;),
ISPICKVAL(Opportunity.StageName, &apos;Closed Pending Approval&apos;))
 
)</errorConditionFormula>
    <errorMessage>Both Initial Bill Date and 100% Ramp Date are required for any product that is not an Existing Service before setting Stage to Purchase or Closed Won.</errorMessage>
</ValidationRule>